--- a/loopstudios-project/input.css
+++ b/loopstudios-project/input.css
@@ -2,6 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    h5 {
+        @apply absolute bottom-4 md:bottom-8 text-2xl w-52 px-6 md:px-10 uppercase text-white group-hover:text-black group-hover:scale-110 duration-200;
+    }
+}
+
+@layer components {
+    .btn {
+        @apply px-10 py-2 my-0 border-2 border-black  uppercase font-alata font-bold tracking-widest hover:bg-black hover:text-white;
+    }
+
+    .items-container {
+        @apply flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-8;
+    }
+
+    .item {
+        @apply relative overflow-hidden md:w-1/4;
+    }
+
+    .text-gradient {
+        @apply absolute top-0 bottom-0 right-0 left-0 bg-gradient-to-b from-transparent to-gray-900 group-hover:from-gray-50 group-hover:to-white group-hover:opacity-70 duration-200;
+    }
+}
+
 #hero {
     background-image: url('../images/desktop/image-hero.jpg');
     background-size: cover;
